Set background-size of help icon to prevent clipping when zoomed-in

--- a/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.theme.css
+++ b/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.theme.css
@@ -378,7 +378,7 @@
 	background: url(./images/help.png);
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: 23px 23px;
 	object-fit: cover;
 	width: 23px;
 	height: 23px;
